clusters/talos-robbinsdale/apps/testbench/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testbench
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
