clusters/talos-robbinsdale/apps/testbench/testbench.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hello-world
spec:
  endpointSelector:
    matchLabels:
     app: hello-world
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        command: ["/bin/sh", "-c", "nginx -g 'daemon off;' & sleep infinity"]
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: curl-hello-world
  template:
    metadata:
      labels:
        app: curl-hello-world
    spec:
      containers:
      - name: curl
        image: curlimages/curl:latest
        command: ["/bin/sh", "-c"]
        args:
          - while true; do
            curl -s http://hello-world.testbench.svc.cluster.local:80;
            echo " - Request completed.";
            sleep 5;
            done;
